--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
+    "axios": "^1.6.8",
+    "cloudinary": "^2.2.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "multiparty": "^4.2.3",
+    "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
