--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    
+    "react-hot-toast": "^2.4.1",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8"
   },
