--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
+/.env
+
 # testing
 /coverage
 
 # next.js
 /.next/
 /out/
+
 
 # production
 /build
@@ -26,7 +30,6 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-
 # vercel
 .vercel
 
